--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="headerMain">
                     <div class="logo">
-                        <img src="/images/logoorangelight.png" id="logo"></a>
+                        <img src="/austinportfolio/images/logoorangelight.png" id="logo"></a>
                     </div>
                     <ul class="mainNav">
                         <li class="headerli">Expertise</li>
