--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="headerli">Contact</li>
                     </ul>
                     <div class="hamburger" onclick="openNav()">
-                        <img src="/images/hamburgerwhite.png">
+                        <img src="/austinportfolio/images/hamburgerwhite.png">
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <a href="#" class="button">VISIT WEBSITE</a>
             </div>
             <figure class="spotLight-image">
-                <img src="/images/spotlight-image1.jpg">
+                <img src="/austinportfolio/images/spotlight-image1.jpg">
             </figure>
         </div>
          <hr>
@@ -160,7 +160,7 @@
                 <a target="_blank" href="http://designdemo-education.design.iapps.com/2-cmsPro/homepage.shtml" class="button">VISIT WEBSITE</a>
             </div>
             <figure class="spotLight-image alignLeft">
-                <img src="/images/spotlight-image1.jpg">
+                <img src="/austinportfolio/images/spotlight-image1.jpg">
             </figure>
         </div>
     </div>
@@ -251,7 +251,7 @@
     <div class="container">
         <div class="footer-container">
             <div class="footer-block">
-                <img src="/images/logoorangelight.png"></a>
+                <img src="/austinportfolio/images/logoorangelight.png"></a>
                 <div class="footerBlock-text">
                     <p>
                         i made dis © 2017
