--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="headerMain">
                     <div class="logo">
-                        <img src="/images/logoorangelight.png" id="logo"></a>
+                        <img src="/austinportfolio/images/logoorangelight.png" id="logo"></a>
                     </div>
                     <ul class="mainNav">
                         <li class="headerli" id="expertise">Expertise</li>
@@ -38,7 +38,7 @@
                         <li class="headerli" id="contact">Contact</li>
                     </ul>
                     <div class="hamburger" onclick="openNav()">
-                        <img src="/images/hamburgerwhite.png">
+                        <img src="/austinportfolio/images/hamburgerwhite.png">
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@ $(".contact").click(function() {
                 <a target="_blank" href="https://alaw989.github.io/" class="button">VISIT WEBSITE</a>
             </div>
             <figure class="spotLight-image">
-                <img src="/images/spotlight-image1.jpg">
+                <img src="/austinportfolio/images/spotlight-image1.jpg">
             </figure>
         </div>
          <hr>
@@ -197,7 +197,7 @@ $(".contact").click(function() {
             <h4 class="testimonial-text">“Austin is helping to refresh our brand with a unique, modern responsive website. He does great work.”
             </h4>
             <div class="testimonial-row">
-                <img src="/images/asianman.png">
+                <img src="/austinportfolio/images/asianman.png">
                 <p> Vuong Phan, Owner, V&P Associates, Inc</p>
             </div>
         </div>
@@ -210,7 +210,7 @@ $(".contact").click(function() {
                 <a target="_blank" href="http://designdemo-education.design.iapps.com/2-cmsPro/homepage.shtml" class="button">VISIT WEBSITE</a>
             </div>
             <figure class="spotLight-image alignLeft">
-                <img src="/images/spotlight-image2.jpg">
+                <img src="/austinportfolio/images/spotlight-image2.jpg">
             </figure>
         </div>
     </div>
@@ -301,7 +301,7 @@ $(".contact").click(function() {
     <div class="container">
         <div class="footer-container">
             <div class="footer-block">
-                <img src="/images/logoorangelight.png"></a>
+                <img src="/austinportfolio/images/logoorangelight.png"></a>
                 <div class="footerBlock-text">
                     <p>
                         Austin Law © 2017
