--- a/index.html
+++ b/index.html
@@ -299,16 +299,8 @@ $(".contact").click(function() {
 
 <div class="footer-wrapper">
     <div class="container">
-        <div class="footer-container">
-            <div class="footer-block">
-                <img src="/austinportfolio/images/logoorangelight.png"></a>
-                <div class="footerBlock-text">
-                    <p>
-                        Austin Law © 2017
-                    </p>
-                </div>
-            </div>
-        </div>
+        <img src="/austinportfolio/images/logoorangelight.png"></a>
+        <p> Austin Law © 2017 </p>
     </div>
 </div>
 
