--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="austinportfolio/images/favicon.ico" type="image/ico">
+    <link rel="shortcut icon" href="/austinportfolio/images/favicon.ico" type="image/ico">
     <script type="text/javascript" src="js/scrollFade.js"></script>
 </head>
 
@@ -186,7 +186,7 @@ $(".contact").click(function() {
             <div class="spotLight-text">
                 <h2>VP & Associates</h2>
                 <li>UX/UI REDESIGN</li>
-                <p>VP & Associates is an Engineering Company based out of Tampa, Florida. They provide a full range of stuctural engineering, steel detailing services and inspection services. <span>Still in progress</span></p>
+                <p>VP & Associates is an Engineering Company based out of Tampa, Florida. They provide a full range of stuctural engineering, steel detailing services and inspection services. <span>Still in progress. Currently temporarily Github hosted.</span></p>
                 <a target="_blank" href="https://alaw989.github.io/" class="button">VISIT WEBSITE</a>
             </div>
             <figure class="spotLight-image">
