--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ $(".contact").click(function() {
                 <i class="fa fa-laptop fa-5x colors" ></i>
                 <h2>UX/UI</h2>
                 <div class="featureBlock-text">
-                    <p>I sketch and wireframe interfaces focusing on content structure, intuitive UI patterns and simple interactions. I'm a minimalist who truly believes that less is more.</p>
+                    <p>I create interfaces focusing on content structure, intuitive UI patterns and simple interactions. I'm a minimalist who truly believes that less is more.</p>
                 </div>
             </div>
             <div class="featureBlock">
